--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">TPDM_U1_practica2_PualBriseno</string>
+    
+    <array name="menuOpcion">
+        <item>Capturar valores</item>
+        <item>Mostrar valores</item>
+        <item>Acerca de..</item>
+        <item>Salir</item>
+    </array>
+
 </resources>
